--- a/backend/package.json
+++ b/backend/package.json
@@ -9,15 +9,17 @@
   "dependencies": {
     "buffer-to-data-url": "^1.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "form-data": "^4.0.1",
-    "mongoose": "^8.7.3",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "node-fetch": "^2.7.0",
     "raw-body": "^3.0.0",
     "replicate": "^1.0.1",
     "stripe": "^17.3.1",
+    "twilio": "^5.3.6",
     "undici": "^5.28.4",
     "web-streams-polyfill": "^4.0.0"
   },
